Baseball Analytics Part 2

--- a/Mini_project_1_baseball_analytics_pt2.ipynb
+++ b/Mini_project_1_baseball_analytics_pt2.ipynb
@@ -537,12 +537,12 @@
     "#### if you don't remember how to create a scatterplot, please refer to part 1\n",
     "#### in the 1st sub-figure (`ax1`), we define the x-axis as 'Runs per Game'\n",
     "#### and y-axis as 'Wins', and color as 'blue'\n",
-    "\n",
+    "ax1.scatter(x1, y, c ='blue')\n",
     "#### You will also add title as 'Runs per Game vs. Wins'\n",
-    "\n",
+    "ax1.set_title('Runs per Game vs. Wins')\n",
     "#### and then add proper axis names to it\n",
-    "\n",
-    "\n",
+    "ax1.set_xlabel\n",
+    "ax1.set_ylabel\n",
     "# To better visualize the correlation trend, we are going to add trend line to it\n",
     "# Following snippet add trend line of correlation to `ax1`\n",
     "\n",
@@ -553,19 +553,20 @@
     "#### complete your code here\n",
     "#### similarly, we are going to visualize the correlation between `runs allowed per game`\n",
     "#### and `Wins` in `ax2`, we set the color to 'red'\n",
-    "\n",
+    "plt.scatter(x2, y, c = 'red')\n",
     "#### You will also add title as 'Runs Allowed per Game vs. Wins'\n",
-    "\n",
+    "plt.set_title('Runs Allowed per Game vs. Wins')\n",
     "#### you will then add x-axis label to `ax2` - note that you do not need \n",
     "#### to add y-axis label since it is shared with `ax1`\n",
-    "\n",
+    "plt.set_title()\n",
     "\n",
     "# We will use the similar code as above to add trend line in `ax2`\n",
     "z1 = np.polyfit(x2, y, 1)\n",
     "p1 = np.poly1d(z1)\n",
     "ax2.plot(x2,p1(x2),\"g--\")\n",
     "\n",
-    "#### show the plot\n"
+    "#### show the plot\n",
+    "plt.show()"
    ]
   },
   {
