Baseball Part 2 Done

--- a/Mini_project_1_baseball_analytics_pt2.ipynb
+++ b/Mini_project_1_baseball_analytics_pt2.ipynb
@@ -188,18 +188,19 @@
     "#### Instead of creating another column of `yearID` (which you can do),\n",
     "#### you can simply tell `plot()` to use the index of the dataframe/series by\n",
     "#### set the `use_index` parameter to `True`\n",
-    "\n",
+    "rpg_df.plot()\n",
     "\n",
     "#### We want to set the title of the visualization as `MLB Yearly Runs Per Game`\n",
-    "\n",
+    "rpg_df.title('MLB Yearly Runs Per Game')\n",
     "\n",
     "#### Set the y-axis as `Runs per Game` use `.xlabel()`\n",
-    "\n",
+    "rpg_df.ylabel('Runs per Game')\n",
     "\n",
     "#### The x-axis is year - so we set it as `Years`\n",
+    "rpg_df.xlabel('Years')\n",
     "\n",
-    "\n",
-    "#### show the plot\n"
+    "#### show the plot\n",
+    "rpg_df.show()"
    ]
   },
   {
@@ -343,18 +344,19 @@
     "#### complete the code below\n",
     "#### Add `year_label` column to `df`\n",
     "#### by applying `assign_label` to the `df['yearID'] column\n",
-    "\n",
+    "df['year_label'] = df['yearID'].apply(assign_label)\n",
     "\n",
     "#### create dummy variables for `year_label`\n",
     "#### call `pd.get_dummies` on `df['year_label']`\n",
     "#### set the `prefix` parameter of `get_dummies` to `'era'`\n",
     "#### store the results in a dataframe `dummy_df`\n",
-    "\n",
+    "dummy_df = pd.get_dummies(df['year_label'], prefix='era')\n",
     "\n",
     "#### Concatenate `df` and `dummy_df` using pd.concat()\n",
+    "df = pd.concat([df, dummy_df],axis=1)\n",
     "\n",
-    "\n",
-    "#### Check whether the dummy variables are successfully created\n"
+    "#### Check whether the dummy variables are successfully created\n",
+    "df.head()"
    ]
   },
   {
@@ -423,19 +425,20 @@
     "#### complete the code below\n",
     "#### Add `decade_label` column to `df`\n",
     "#### by applying `assign_decade` function to the `df['yearID'] column\n",
-    "\n",
+    "df['decade_label'] = df['yearID'].apply(assign_decade)\n",
     "\n",
     "#### create dummy variables for `year_label`\n",
     "#### call `pd.get_dummies` on `df['year_label']`\n",
     "#### set the `prefix` parameter of `get_dummies` to `'era'`\n",
     "#### store the results in a dataframe `decade_df`\n",
-    "\n",
+    "decade_df = pd.get_dummies(df['decade_label'], prefix = 'decade')\n",
     "\n",
     "#### Concatenate `df` and `decade_df` using pd.concat()\n",
-    "\n",
+    "decade_df.head()\n",
     "\n",
     "#### Check if above actions are done properly\n",
-    "#### by looking at the first 5 rows of `df`\n"
+    "#### by looking at the first 5 rows of `df`\n",
+    "df.head()"
    ]
   },
   {
@@ -541,14 +544,14 @@
     "#### You will also add title as 'Runs per Game vs. Wins'\n",
     "ax1.set_title('Runs per Game vs. Wins')\n",
     "#### and then add proper axis names to it\n",
-    "ax1.set_xlabel\n",
-    "ax1.set_ylabel\n",
+    "ax1.set_xlabel('Runs per Game')\n",
+    "ax1.set_ylabel('Wins')\n",
     "# To better visualize the correlation trend, we are going to add trend line to it\n",
     "# Following snippet add trend line of correlation to `ax1`\n",
     "\n",
     "z = np.polyfit(x1, y, 1)\n",
     "p = np.poly1d(z)\n",
-    "ax1.plot(x1,p(x1),\"r--\")\n",
+    "ax1.plot(x1,p(x1),\"red\")\n",
     "\n",
     "#### complete your code here\n",
     "#### similarly, we are going to visualize the correlation between `runs allowed per game`\n",
@@ -558,12 +561,12 @@
     "plt.set_title('Runs Allowed per Game vs. Wins')\n",
     "#### you will then add x-axis label to `ax2` - note that you do not need \n",
     "#### to add y-axis label since it is shared with `ax1`\n",
-    "plt.set_title()\n",
-    "\n",
+    "plt.set_xlabel('Runs Average Per Game')\n",
+    "plt.set_ylabel('Wins')\n",
     "# We will use the similar code as above to add trend line in `ax2`\n",
     "z1 = np.polyfit(x2, y, 1)\n",
     "p1 = np.poly1d(z1)\n",
-    "ax2.plot(x2,p1(x2),\"g--\")\n",
+    "ax2.plot(x2,p1(x2),\"green\")\n",
     "\n",
     "#### show the plot\n",
     "plt.show()"
